--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lodash": "^4.17.21",
     "monaco-editor": "^0.50.0",
     "vite-plugin-monaco-editor": "^1.1.0",
-    "vue": "^3.4.35"
+    "vue": "^3.4.35",
+    "vue-json-pretty": "^2.4.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.2",
